--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -231,7 +231,7 @@
                                                                                       </ul>
     </div>
     <div class="mainad">
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=cate3"></script>
+<script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=507a5e15-adcc-4f64-a80e-c3921c1b9fb8"></script>
     </div>
     <div class="mainnews"> 
                  {dede:arclist row=1 typeid='23'}   
@@ -282,7 +282,7 @@
                       </ul>
     </div>
     <div class="mainad">
-<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=cate4"></script>
+<script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=aae7167b-2507-417f-b6c6-50bad0bc5f62"></script>
     </div>
     <div class="mainnews"> 
                {dede:arclist row=1 typeid='24'}   
