--- a/Soft/dedecms/taobao1/article_article.htm
+++ b/Soft/dedecms/taobao1/article_article.htm
@@ -14,8 +14,7 @@
 {dede:include filename="head.htm"/}
 
 <div id="main">
-<div><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama6"></script></div>
-<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama7"></script></div>
+<div class="indadc">  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=f54b30a7-52d9-4b9d-a758-958029a5d000"></script> </div>
 <div class="newshow">
 <div class="newshowlj"><b>您当前的位置：</b> {dede:field name='position'/} </div>
 <div class="newshowbody">
@@ -61,7 +60,7 @@
 </div>
 
 <div class="newshowleft">
-<div class="newshowad"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama8"></script></div>
+<div class="newshowad">  <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=abfc090a-d054-423f-9f99-d9d44f488794"></script></div>
 <div class="newshowzxzx">
 <h1>热点资讯</h1>
 <ul>
@@ -81,15 +80,17 @@
 </div>
 </div>
 
-<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama9"></script></div>
-<div class="indadc"><table width="950" border="0" align="center" cellpadding="0" cellspacing="0" style="margin-top:5px;">
+<div class="indadc"> <script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=aa84c9b9-6783-491a-ba5e-ed7d1fc68af9"></script></div>
+<div class="indadc"><!--<table width="950" border="0" align="center" cellpadding="0" cellspacing="0" style="margin-top:5px;">
   <tr>
     <td align="left">
-		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama10"></script></td>
+		gg1</td>
     <td align="right">
-		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama11"></script>	</td>
+		gg2	</td>
   </tr>
-</table></div>
+</table>--></div>
+
+</div>
 
 {dede:include filename="foot.htm"/}
 
