--- a/Soft/dedecms/taobao1/list_article.htm
+++ b/Soft/dedecms/taobao1/list_article.htm
@@ -31,13 +31,13 @@
 
 
 <div class="classzleft">
-<div class="newzad"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama12"></script></div>
+<div class="newzad"><script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=abfc090a-d054-423f-9f99-d9d44f488794"></script></div>
 <div class="classzrdzx">
 <h1>热点资讯</h1>
 </div>
 <div class="classzpic">
 <ul>
-{dede:arclist row='6' titlelen='20' imgwidth='116' imgheight='174'}  
+{dede:arclist row='6' titlelen='14' imgwidth='116' imgheight='174'}  
 <li><a href='[field:arcurl/]' target='_blank'>[field:image/]</a><br /><a href="[field:arcurl/]">[field:title/]</a></li>
 {/dede:arclist}   
 </ul>
@@ -65,16 +65,7 @@
 </div>
 
 
-<div class="indadc"><script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama13"></script></div>
-
-<div class="indadc"><table width="950" border="0" align="center" cellpadding="0" cellspacing="0" style="margin-top:5px;">
-  <tr>
-    <td align="left">
-		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama14"></script>	</td>
-    <td align="right">
-		<script language="javascript" type="text/javascript" src="http://www.tetuiguang.com/showads/?typ=alimama15"></script>	</td>
-  </tr>
-</table></div>
+<div class="indadc"><script language="javascript" type="text/javascript" src="http://tetuiguang.com/GetAdsCode.aspx?id=aa84c9b9-6783-491a-ba5e-ed7d1fc68af9"></script></div>
 
 </div>
 
