--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -21,12 +21,12 @@
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
 <div class="topsearch2"><input type="submit" id="btnsearch" value="搜索" /></div>
 </form>
-<div id="topsearch3">热搜：<a href="/plus/search.php?keyword=春季搭配" target="_blank">春季搭配</a> 
-<a href="/plus/search.php?keyword=牛仔裤" target="_blank">牛仔裤</a> 
-<a href="/plus/search.php?keyword=画眼妆" target="_blank">画眼妆</a> 
-<a href="/plus/search.php?keyword=明星搭配" target="_blank">明星搭配</a>
-<a href="/plus/search.php?keyword=凉鞋" target="_blank">凉鞋</a>
-<a href="plus/search.php?keyword=泳装" target="_blank">泳装</a></div>
+<div id="topsearch3">热搜：<a href="/plus/search.php?keyword=春季搭配&searchtype=titlekeyword" target="_blank">春季搭配</a> 
+<a href="/plus/search.php?keyword=牛仔裤&searchtype=titlekeyword" target="_blank">牛仔裤</a> 
+<a href="/plus/search.php?keyword=画眼妆&searchtype=titlekeyword" target="_blank">画眼妆</a> 
+<a href="/plus/search.php?keyword=明星搭配&searchtype=titlekeyword" target="_blank">明星搭配</a>
+<a href="/plus/search.php?keyword=凉鞋&searchtype=titlekeyword" target="_blank">凉鞋</a>
+<a href="plus/search.php?keyword=泳装&searchtype=titlekeyword" target="_blank">泳装</a></div>
 </div>
 
 <div id="topclass">
