--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -21,12 +21,12 @@
 <div class="topsearch2"><input name="keyword" type="text" style="width:300px; border:0px; height:22px" /></div>
 <div class="topsearch2"><input type="submit" id="btnsearch" value="搜索" /></div>
 </form>
-<div id="topsearch3">热搜：<a href="/plus/search.php?keyword=春季搭配&searchtype=titlekeyword" target="_blank">春季搭配</a> 
-<a href="/plus/search.php?keyword=牛仔裤&searchtype=titlekeyword" target="_blank">牛仔裤</a> 
-<a href="/plus/search.php?keyword=画眼妆&searchtype=titlekeyword" target="_blank">画眼妆</a> 
-<a href="/plus/search.php?keyword=明星搭配&searchtype=titlekeyword" target="_blank">明星搭配</a>
-<a href="/plus/search.php?keyword=凉鞋&searchtype=titlekeyword" target="_blank">凉鞋</a>
-<a href="plus/search.php?keyword=泳装&searchtype=titlekeyword" target="_blank">泳装</a></div>
+<div id="topsearch3">热搜：<a href="/plus/search.php?keyword=%E5%A4%8F%E5%AD%A3%E6%90%AD%E9%85%8D&searchtype=titlekeyword" target="_blank">搭配</a> 
+<a href="/plus/search.php?keyword=%E7%89%9B%E4%BB%94%E8%A3%A4&searchtype=titlekeyword" target="_blank">牛仔裤</a> 
+<a href="/plus/search.php?keyword=%E7%9C%BC%E5%A6%86&searchtype=titlekeyword" target="_blank">画眼妆</a> 
+<a href="/plus/search.php?keyword=%E6%98%8E%E6%98%9F%E6%90%AD%E9%85%8D&searchtype=titlekeyword" target="_blank">明星搭配</a>
+<a href="/plus/search.php?keyword=%E5%87%89%E9%9E%8B&searchtype=titlekeyword" target="_blank">凉鞋</a>
+<a href="/plus/search.php?keyword=%E6%B3%B3%E8%A3%85&searchtype=titlekeyword" target="_blank">泳装</a></div>
 </div>
 
 <div id="topclass">
