--- a/Soft/dedecms/taobao1/foot.htm
+++ b/Soft/dedecms/taobao1/foot.htm
@@ -11,3 +11,5 @@
 <div id="foot">
 Copyright &copy; 2010-2012 www.fenseshenghuo.com 版权所有 ICP证：<A href="http://www.miibeian.gov.cn/" target="_blank">闽ICP备09004062号-1</A>
 </div>
+
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/14663083.js"></script>
