--- a/top/indexnewx.html
+++ b/top/indexnewx.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" >
 <head>
-    <title>特特软件-淘宝卖家一站式服务软件解决方案</title>
+    <title>好评有礼-淘宝一站式评价相关服务软件解决方案</title>
     <link href="css/css1.css" rel="stylesheet" />
     <link href="css/member.css" rel="stylesheet" />
     <link href="market/images/tab.css" rel="stylesheet" />
@@ -31,8 +31,7 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
     </div>
     
     <div style="width:928px;">
-       <div style="color:Red; font-weight:bold; font-size:22px;">【公告】：好评有礼将于7月21日0点到8点进行服务器升级，升级时间内所有功能将无法使用，给您带来的不便我们深表抱歉！</div>
-    <img src='reviewnew/images/banner4yue.jpg' border='0' style="display:none" /></div>
+    <img src='reviewnew/images/banner4yue.jpg' border='0'  /></div>
 
 <div id="content1">
 
@@ -40,14 +39,16 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 <div id="tabCot_product" class="tab">
 <div class="tabContainer">
 <div style="float:left; width:161px;">
-    <img alt="特特营销推广专家" src="images/logo.png" width="150" height="40" />
+    <img alt="特特软件" src="images/logo.png" width="150" height="40" />
 </div>
 <ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
-   <li class="noTab"><a href="http://fuwu.taobao.com/ser/detail.htm?service_code=ts-22655&f=haoping" target="_blank" title="营销推广">营销推广</a></li>
-   <li class="noTab"><a href="http://fuwu.taobao.com/serv/detail.htm?service_id=11807&f=haoping" target="_blank" title="团购营销">团购营销</a></li>
-   <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="3">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="4">客户关系营销</a></li>
-   <li class="noTab"><a href="http://bangpai.taobao.com/group/1091516.htm" target="_blank" title="社区">社区</a></li>
+   <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="1">好评有礼</a></li>
+   <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="2">短信提醒</a></li>
+   <li><a href="javascript:void(0)" title="优惠券" rel="3">优惠券</a></li>
+   <li><a href="javascript:void(0)" title="包邮卡" rel="4">包邮卡</a></li>
+   <li><a href="javascript:void(0)" title="支付宝红包" rel="5">支付宝红包</a></li>
+   <li><a href="javascript:void(0)" title="二次销售" rel="6">二次销售</a></li>
+   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户关系营销</a></li>
    <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">使用教程</a></li>
 </ul>
 </div>
