--- a/top/DataAnalysis/YXBangTui.Web/index.html
+++ b/top/DataAnalysis/YXBangTui.Web/index.html
@@ -122,7 +122,7 @@
             <br />
             <div id="footer">
                 <div id="copyright">
-                    Copyright &copy; 2010-2012 7fshop.com 版权所有
+                    Copyright &copy; 2010-2012 tetuiguang.com 版权所有
                     <br />
                     <a href='http://www.miibeian.gov.cn/' target="_blank">沪ICP备10023864号-1</a>
                 </div>
@@ -153,7 +153,7 @@
             function initTongji() {
                 document.getElementById("tabCot_product_1").style.display = "none";
 
-                document.getElementById("mainframe6id").src = "http://ding.7fshop.com/default.aspx";
+                document.getElementById("mainframe6id").src = "http://www.tetuiguang.com/default.aspx";
                 closeArea();
             }
         </script>
