--- a/top/indexnewx.html
+++ b/top/indexnewx.html
@@ -41,15 +41,15 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 <div style="float:left; width:161px;">
     <img alt="特特软件" src="images/logo.png" width="150" height="40" />
 </div>
-<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:600px; margin-top:10px;">
+<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="1">好评有礼</a></li>
-   <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="2">短信提醒</a></li>
+   <li><a href="javascript:void(0)" title="好评有礼" rel="2">短信提醒</a></li>
    <li><a href="javascript:void(0)" title="优惠券" rel="3">优惠券</a></li>
    <li><a href="javascript:void(0)" title="包邮卡" rel="4">包邮卡</a></li>
-   <li><a href="javascript:void(0)" title="支付宝红包" rel="5">支付宝红包</a></li>
+   <li><a href="javascript:void(0)" title="支付宝红包" rel="5">红包</a></li>
    <li><a href="javascript:void(0)" title="二次销售" rel="6">二次销售</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户关系营销</a></li>
-   <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">使用教程</a></li>
+   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a></li>
+   <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">教程</a></li>
 </ul>
 </div>
 
@@ -178,8 +178,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
             </div>
         </div>
         
-        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" name="mainframe2" src="http://haoping.7fshop.com/top/reviewnew/default.aspx" frameborder="0" scrolling="no"></iframe>
+        <div style="width:780px; margin-left:10px; float:left; height:900px;">
+                <iframe style="overflow:scroll; width: 100%; height:900px; padding:0px;" name="mainframe2" src="http://haoping.7fshop.com/top/reviewnew/default.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
 </div>
@@ -266,8 +266,8 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
             </div>
         </div>
         
-        <div style="width:780px; margin-left:10px; float:left; height:1220px;">
-                <iframe style="overflow:scroll; width: 100%; height:1220px; padding:0px;" 
+        <div style="width:780px; margin-left:10px; float:left; height:900px;">
+                <iframe style="overflow:scroll; width: 100%; height:900px; padding:0px;" 
 
 name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameborder="0" scrolling="no"></iframe>
         </div>
@@ -279,12 +279,10 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 
 </div>
 
-<br /><br /><br />
-
 
 <div id="footer">
 <div id="copyright">
-    Copyright &copy; 2010-2012 7fshop.com 版权所有 <br />
+    Copyright &copy; 2010-2012 tetesoft.com 版权所有 <br />
     <a href='http://www.miibeian.gov.cn/' target="_blank">沪ICP备10023864号-1</a>
 </div>
 <div class="copyright">
@@ -376,10 +374,6 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
 </script>
 </div>
 
-
-<div style="display:none">
-<script src="http://s15.cnzz.com/stat.php?id=2663320&web_id=2663320&show=pic" language="JavaScript"></script>
-</div>
 
 <div id="div1" style="position: absolute; display:none; top: 0pt; left: 0pt; 
 
