--- a/top/indexnewx.html
+++ b/top/indexnewx.html
@@ -41,14 +41,15 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 <div style="float:left; width:161px;">
     <img alt="特特软件" src="images/logo.png" width="150" height="40" />
 </div>
-<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:700px; margin-top:10px;">
+<ul class="tabHead" id="tabCot_product-li-currentBtn-" style="float:left; width:760px; margin-top:10px;">
    <li class="currentBtn"><a href="javascript:void(0)" title="好评有礼" rel="1">好评有礼</a></li>
-   <li><a href="javascript:void(0)" title="好评有礼" rel="2">短信提醒</a></li>
-   <li><a href="javascript:void(0)" title="优惠券" rel="3">优惠券</a></li>
-   <li><a href="javascript:void(0)" title="包邮卡" rel="4">包邮卡</a></li>
-   <li><a href="javascript:void(0)" title="支付宝红包" rel="5">红包</a></li>
-   <li><a href="javascript:void(0)" title="二次销售" rel="6">二次销售</a></li>
-   <li><a href="javascript:void(0)" title="客户关系营销" rel="5">客户营销</a></li>
+   <li><a href="javascript:void(0)" title="活动展示" rel="2">活动展示</a></li>
+   <li><a href="javascript:void(0)" title="短信提醒" rel="3">短信提醒</a></li>
+   <li><a href="javascript:void(0)" title="优惠券" rel="4">优惠券</a></li>
+   <li><a href="javascript:void(0)" title="包邮卡" rel="5">包邮卡</a></li>
+   <li><a href="javascript:void(0)" title="支付宝红包" rel="6">红包</a></li>
+   <li><a href="javascript:void(0)" title="抽奖" rel="7">抽奖</a></li>
+   <li><a href="javascript:void(0)" title="客户关系营销" rel="8">客户营销</a></li>
    <li class="noTab"><a href="http://bangpai.taobao.com/group/thread/1091516-266680296.htm" target="_blank" title="使用教程" style="color:Red">教程</a></li>
 </ul>
 </div>
@@ -77,13 +78,13 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 </h3>
 <ul class="group">
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2"><b>1、创建好评活动</b></a></span></li>
+		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">1、创建好评活动</a></span></li>
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2"><b>2、展示在店铺里</b></a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">2、展示在店铺里</a></span></li>	
         <li><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2"><b>3、设置短信提醒</b></a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">3、设置短信提醒</a></span></li>	
         <li><span> <a
-		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2"><b>4、提升二次销售</b></a></span></li>	
+		href="http://haoping.7fshop.com/top/reviewnew/html.aspx" target="mainframe2">4、提升二次销售</a></span></li>	
     </ul>
 </div>
 
@@ -108,24 +109,16 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
 
 
 <div class="menu-box">
-<h3 class="mytaobao-bar" onclick="focusObj(2)"><span> 二次销售分析 </span>
+<h3 class="mytaobao-bar" onclick="focusObj(2)"><span> 二次销售 </span>
 <button class="menu-close">-</button>
 </h3>
     <ul class="group" id="area2">
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">优惠券效果分析</a></span></li>
+		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">礼品营销</a></span></li>
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">包邮卡效果分析</a></span></li>
+		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">客户关怀</a></span></li>
 		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">支付宝红包效果分析</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">抽奖效果分析</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">未付款催单效果分析</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">生日关怀效果分析</a></span></li>
-		<li><span> <a
-		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">老客户关怀效果分析</a></span></li>
+		href="http://haoping.7fshop.com/top/reviewx/setting.aspx" target="mainframe2">效果分析</a></span></li>
     </ul>
 </div>
 
@@ -142,21 +135,197 @@ align="absmiddle" src="http://amos.im.alisoft.com/online.aw?v=2&uid=美杜莎之
     </div>
 </div>
 
-
-
-
-
+<!--content start-->
 <div id="tabCot_product_2" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 活动展示 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">店铺分类展示</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">宝贝描述展示</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">店铺模块展示</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">活动页展示</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">短信展示</a></span></li>
+		                 <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">二维码展示</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+<!--content start-->
+<div id="tabCot_product_3" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 短信提醒 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">短信提醒设置</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">短信发送记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">购买短信</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">短信充值记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">短信黑名单</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+
+<!--content start-->
+<div id="tabCot_product_4" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 优惠券 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">优惠券管理</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">赠送记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">优惠券使用记录</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">手动赠送</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">按组批量赠送</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+
+<!--content start-->
+<div id="tabCot_product_5" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 包邮卡 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡管理</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">赠送记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡使用记录</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">手动赠送</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">按组批量赠送</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+<!--content start-->
+<div id="tabCot_product_6" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 支付宝红包 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡管理</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">赠送记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡使用记录</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">手动赠送</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">按组批量赠送</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+<!--content start-->
+<div id="tabCot_product_7" class="tabCot" style="padding:2px 0 0 0; display:none">
+    <div id="mytaobao-panel" class="grid-c2">
+        <div class="col-sub">
+            <div id="mytaobao-menu" class="box-diamond">
+                <div class="mytaobao-bd">
+                    <div class="menu-box">
+                    <h3 class="mytaobao-bar"><span> 抽奖 </span>
+                    <button class="menu-close">-</button>
+                    </h3>
+                    <ul class="group">
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡管理</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">赠送记录</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">包邮卡使用记录</a></span></li>
+		                    <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/grouplist.aspx" target="mainframe5">手动赠送</a></span></li>
+	                      <li><span> <a
+		                    href="http://haoping.7fshop.com/top/crm/customlist.aspx" target="mainframe5">按组批量赠送</a></span></li>
+		                </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--content end-->
+
+<div id="tabCot_product_8" class="tabCot" style="padding:2px 0 0 0; display:none">
     <div id="mytaobao-panel" class="grid-c2">
         <div class="col-sub">
             <div id="mytaobao-menu" class="box-diamond">
 <!--content-->
 
 <div class="mytaobao-bd">
-
-
-
-
 <div class="menu-box">
 <h3 class="mytaobao-bar"><span> 客户列表 </span>
 <button class="menu-close">-</button>
@@ -277,7 +446,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
             var j = 1;
             for (var i = 0; i < item.length - 1; i++) {
                 if (item[i].className.indexOf(css[2]) >= 0 || item[i].className.indexOf(css[3]) >= 0) {
-                    if (i != 0 && i != 1) {
+                    //if (i != 0 && i != 1) {
                         if (item[i].className == css[2]) o['cur'] = item[i];
                         item[i].callBack = cb || function () { };
                         item[i]['css'] = css;
@@ -285,7 +454,7 @@ name="mainframe5" src="http://haoping.7fshop.com/top/crm/customlist.aspx" frameb
                         this.ITEM[j] = item[i];
                         item[i]['Index'] = j++;
                         item[i][this.event] = this.ACTIVE;
-                    }
+                    //}
                 }
             }
             return o;
