--- a/Soft/dedecms/taobao1/head.htm
+++ b/Soft/dedecms/taobao1/head.htm
@@ -5,6 +5,7 @@
 <a href="http://www.mengmeng8.com" target="_blank">萌萌吧</a></div>
  <ul class="topmenu">
   <li class="topmenu1"><a href="/index.html">首页</a></li>
+  <li class="topmenu2"><a href="/tmall.aspx">天猫精选</a></li>
   <li class="topmenu2"><a href="http://www.go12go.com" target="_blank">导购网</a></li>
   <li class="topmenu2"><a href="http://www.niubibang.com" target="_blank">男人邦</a></li>
   <li class="topmenu2"><a href="http://www.hi859.com" target="_blank">房产</a></li>
