--- a/Soft/dedecms/taobao1/index.htm
+++ b/Soft/dedecms/taobao1/index.htm
@@ -322,6 +322,18 @@
   </div>
 </div>
 
+<script type="text/javascript"><!--
+google_ad_client = "ca-pub-5390009724308199";
+/* test1 */
+google_ad_slot = "8727903937";
+google_ad_width = 728;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
 {dede:include filename="foot.htm"/}
 
 </body>
